# Crypto-Backtester-Duel

./: SmaCross_bt.html  pyproject.toml
src/: main.py
src/config/: config.py
src/strategies/: backtesting_py.py
src/utils/: utils.py
